--- a/templates/kitchen/dish_type_list.html
+++ b/templates/kitchen/dish_type_list.html
@@ -2,5 +2,39 @@
 
 {% block content %}
   <h1>Dish Types</h1>
+  {% if dish_type_list %}
+    <table class="table">
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Update</th>
+        <th>Delete</th>
+      </tr>
 
+      {% for dish_type in dish_type_list %}
+        <tr>
+          <td>
+              {{ dish_type.id }}
+          </td>
+          <td>
+              {{ dish_type.name }}
+          </td>
+          <td>
+              <a href="#">
+                Update
+              </a>
+            </td>
+            <td>
+              <a style="color: red"
+                href="#">
+                Delete
+              </a>
+            </td>
+        </tr>
+      {% endfor %}
+    </table>
+
+  {% else %}
+      <p>There are no dish type in the kitchen.</p>
+  {% endif %}
 {% endblock %}
