Change magical method __str__ in all models

--- a/templates/kitchen/cook_list.html
+++ b/templates/kitchen/cook_list.html
@@ -8,7 +8,7 @@
       </a>
     </h1>
 
-    {% if driver_list %}
+    {% if cook_list %}
     <table class="table">
       <tr>
         <th>ID</th>
