Add sidebar.html to includes and registeres it in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     <div class="col-sm-2">
 
       {% block sidebar %}
-
+        {% include "includes/sidebar.html" %}
       {% endblock %}
 
     </div>
