--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -13,7 +13,9 @@
       {% for dish in dish_list %}
         <li>
           <a href="#">{{ dish.id }}</a>
-          Dish name: {{ dish.name }} Type dish: {{ dish.dish_type.name }} Price: {{ dish.price }}
+          <strong>Dish name:</strong> {{ dish.name }}
+          <strong>Type dish:</strong> {{ dish.dish_type.name }}
+          <strong>Price:</strong> {{ dish.price }}
         </li>
       {% endfor %}
     </ul>
