--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,5 +1,13 @@
 <ul class="sidebar-nav list-group">
-  <!-- There will be code by loin and logout-->
+  {% if user.is_authenticated %}
+    <li class="list-group-item">User: <a href="{{ user.get_absolute_url }}">{{ user.get_username }}</a></li>
+    <form method="post" action="{% url 'logout' %}">
+        {% csrf_token %}
+        <li class="list-group-item"><button type="submit">Logout</button></li>
+    </form>
+  {% else %}
+    <li class="list-group-item"><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+  {% endif %}
 
   <br>
 
