--- a/templates/kitchen/cook_list.html
+++ b/templates/kitchen/cook_list.html
@@ -20,7 +20,7 @@
     {% for cook in cook_list %}
       <tr>
         <td>{{ cook.id }}</td>
-        <td><a href="{{ driver.get_absolute_url }}">{{ cook.username }} {% if user == driver %} (Me){% endif %}</a></td>
+        <td><a href="{% url 'kitchen:cook-detail' pk=cook.id %}">{{ cook.username }} {% if user == driver %} (Me){% endif %}</a></td>
         <td>{{ cook.first_name }}</td>
         <td>{{ cook.last_name }}</td>
         <td>{{ cook.years_of_experience }}</td>
