Add DishDetailView to kitchen.views and add templete dish_detail.html by this view register view in kitchen.urls and add link to detail page in dish_list.html

--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -12,7 +12,7 @@
     <ul>
       {% for dish in dish_list %}
         <li>
-          <a href="#">{{ dish.id }}</a>
+          <a href="{% url 'kitchen:dish-detail' pk=dish.id %}">{{ dish.id }}</a>
           <strong>Dish name:</strong> {{ dish.name }}
           <strong>Type dish:</strong> {{ dish.dish_type.name }}
           <strong>Price:</strong> {{ dish.price }}
