Add DishTypeDeleteView to kitchen and add frontend by this view and add link by deleted dish types on dish_type_list.html

--- a/templates/kitchen/dish_type_list.html
+++ b/templates/kitchen/dish_type_list.html
@@ -26,7 +26,7 @@
             </td>
             <td>
               <a style="color: red"
-                href="#">
+                href="{% url 'kitchen:dish-type-delete' pk=dish_type.id %}">
                 Delete
               </a>
             </td>
