Add DishTypeCreateView to kitchen app and add dish_type_form.html by this view and add link to this view on dish_type_list.html

--- a/templates/kitchen/dish_type_list.html
+++ b/templates/kitchen/dish_type_list.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Dish Types</h1>
+  <h1>
+    Dish Types
+    <a href="{% url 'kitchen:dish-type-create' %}" class="btn btn-primary link-to-page">Create</a>
+  </h1>
   {% if dish_type_list %}
     <table class="table">
       <tr>
