Add DishTypeUpdateView to kitchen app and add link on dish_type_list.html by this view

--- a/templates/kitchen/dish_type_list.html
+++ b/templates/kitchen/dish_type_list.html
@@ -23,7 +23,7 @@
               {{ dish_type.name }}
           </td>
           <td>
-              <a href="#">
+              <a href="{% url 'kitchen:dish-type-update' pk=dish_type.id %}">
                 Update
               </a>
             </td>
