--- a/templates/kitchen/cook_detail.html
+++ b/templates/kitchen/cook_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
   <h1>
     Username: {{ cook.username }}
-    <a href="#" class="btn btn-danger link-to-page">
+    <a href="{% url 'kitchen:cook-delete' pk=cook.id %}" class="btn btn-danger link-to-page">
       Delete
     </a>
   </h1>
