--- a/templates/kitchen/cook_detail.html
+++ b/templates/kitchen/cook_detail.html
@@ -6,6 +6,9 @@
     <a href="{% url 'kitchen:cook-delete' pk=cook.id %}" class="btn btn-danger link-to-page">
       Delete
     </a>
+    <a href="{% url 'kitchen:cook-update' pk=cook.id %}" class="btn btn-primary link-to-page">
+      Update
+    </a>
   </h1>
 
   <p><strong>First name:</strong> {{ cook.first_name }}</p>
