--- a/templates/kitchen/dish_detail.html
+++ b/templates/kitchen/dish_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
   <h1>
     {{ dish.name }}
-    <a href="#" class="btn btn-danger link-to-page">
+    <a href="{% url 'kitchen:dish-delete' pk=dish.id %}" class="btn btn-danger link-to-page">
       Delete
     </a>
 
