--- a/templates/kitchen/dish_detail.html
+++ b/templates/kitchen/dish_detail.html
@@ -7,7 +7,7 @@
       Delete
     </a>
 
-    <a href="#" class="btn btn-secondary link-to-page">
+    <a href="{% url 'kitchen:dish-update' pk=dish.id %}" class="btn btn-secondary link-to-page">
       Update
     </a>
   </h1>
