Add CookSearchForm, DishSearchForm and DishTypeSearchForm by forms.py in app kitchen, add form by search on cook_list.html, dish_list.html and dish_type_list.html, change CookListView, DishListView and DishTypeListView(defined mrthod get_context_data and get_queryset by search form)

--- a/templates/kitchen/cook_list.html
+++ b/templates/kitchen/cook_list.html
@@ -8,6 +8,11 @@
       </a>
     </h1>
 
+    <form method="get" action="" class="form-inline">
+      {{ search_form.as_p }}
+      <input type="submit" class="btn btn-secondary" value="🔎">
+    </form>
+
     {% if cook_list %}
     <table class="table">
       <tr>
