--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -8,6 +8,11 @@
     </a>
   </h1>
 
+  <form method="get" action="" class="form-inline">
+    {{ search_form.as_p }}
+    <input type="submit" class="btn btn-secondary" value="🔎">
+  </form>
+
   {% if dish_list %}
     <ul>
       {% for dish in dish_list %}
