--- a/templates/kitchen/dish_type_list.html
+++ b/templates/kitchen/dish_type_list.html
@@ -5,6 +5,12 @@
     Dish Types
     <a href="{% url 'kitchen:dish-type-create' %}" class="btn btn-primary link-to-page">Create</a>
   </h1>
+
+  <form method="get" action="" class="form-inline">
+    {{ search_form.as_p }}
+    <input type="submit" class="btn btn-secondary" value="🔎">
+  </form>
+
   {% if dish_type_list %}
     <table class="table">
       <tr>
