Changr file pagination.html and file navigation add new style to file dish_type_list.html and login.html

--- a/templates/kitchen/dish_type_list.html
+++ b/templates/kitchen/dish_type_list.html
@@ -10,7 +10,7 @@
       <div class="row">
         <div class="col-lg-7 text-center mx-auto">
           <h1 class="text-white pt-3 mt-n5">Restaurant Kitchen</h1>
-          <p class="lead text-white mt-3">Welcome to our kitchen! <br/></p>
+          <p class="lead text-white mt-3">List with all dish types <br/></p>
         </div>
       </div>
     </div>
@@ -46,30 +46,32 @@
   {% if dish_type_list %}
     <table class="table">
       <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Update</th>
-        <th>Delete</th>
+        <th class="alert alert-dark text-white font-weight-bold">Name</th>
+        <th class="alert alert-dark text-white font-weight-bold">Update</th>
+        <th class="alert alert-dark text-white font-weight-bold">Delete</th>
       </tr>
 
       {% for dish_type in dish_type_list %}
         <tr>
+
           <td>
-              {{ dish_type.id }}
-          </td>
-          <td>
+            <div class="alert alert-info text-white font-weight-bold" role="alert">
               {{ dish_type.name }}
+            </div>
           </td>
           <td>
+            <span class="badge bg-gradient-success">
               <a href="{% url 'kitchen:dish-type-update' pk=dish_type.id %}">
                 Update
               </a>
+            </span>
             </td>
             <td>
-              <a style="color: red"
-                href="{% url 'kitchen:dish-type-delete' pk=dish_type.id %}">
-                Delete
-              </a>
+              <span class="badge bg-gradient-danger">
+                <a href="{% url 'kitchen:dish-type-delete' pk=dish_type.id %}">
+                  Delete
+                </a>
+              </span>
             </td>
         </tr>
       {% endfor %}
