--- a/templates/layouts/base_sections.html
+++ b/templates/layouts/base_sections.html
@@ -50,6 +50,12 @@
 
   {% block content %}{% endblock content %}
 
+  {% block pagination %}
+
+    {% include 'includes/pagination.html' %}
+
+  {% endblock pagination %}
+
   {% block footer %}
   
     {% include 'includes/footer_background.html' %}
