--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -104,9 +104,6 @@
                     <a href="{% url 'login' %}" class="dropdown-item border-radius-md">
                       <span class="ps-3">Sign In</span>
                     </a>
-                    <a href="{% url 'register' %}" class="dropdown-item border-radius-md">
-                      <span class="ps-3">Sign Up</span>
-                    </a>
                     {% endif %}
                   </div>
 
@@ -190,9 +187,6 @@
                     <a href="{% url 'login' %}" class="dropdown-item border-radius-md">
                       <span class="ps-3">Sign In</span>
                     </a>
-                    <a href="{% url 'register' %}" class="dropdown-item border-radius-md">
-                      <span class="ps-3">Sign Up</span>
-                    </a>
                     {% endif %}
 
                   </div>
@@ -222,8 +216,15 @@
               {% endif %}
 
               <li class="nav-item my-auto ms-3 ms-lg-0">
-                <a href="{% url 'kitchen:cook-detail' pk=user.id %}"
-                  class="btn btn-sm  bg-gradient-primary  btn-round mb-0 me-1 mt-2 mt-md-0">Current user: {{ user.username }}</a>
+                {% if request.user.is_authenticated %}
+                  <a href="{% url 'kitchen:cook-detail' pk=user.id %}"
+                    class="btn btn-sm  bg-gradient-primary  btn-round mb-0 me-1 mt-2 mt-md-0">Current user: {{ user.username }}
+                  </a>
+                {% else %}
+                  <a href="{% url 'login' %}"
+                    class="btn btn-sm  bg-gradient-primary  btn-round mb-0 me-1 mt-2 mt-md-0">Sing in
+                  </a>
+                {% endif %}
               </li>
             </ul>
           </div>
