Add new content to page index.html

--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -59,6 +59,9 @@
                       Kitchen pages
                     </div>
                     </a>
+                    <a href="{% url 'kitchen:index' %}" class="dropdown-item border-radius-md">
+                      <span class="ps-3">Home</span>
+                    </a>
                     <a href="{% url 'kitchen:dish-type-list' %}" class="dropdown-item border-radius-md">
                       <span class="ps-3">Dish types</span>
                     </a>
