--- a/templates/kitchen/index.html
+++ b/templates/kitchen/index.html
@@ -45,24 +45,24 @@
           <div class="col-md-4 position-relative">
             <div class="p-3 text-center">
               <h1 class="text-gradient text-primary"><span id="state1" countTo="{{ num_dish_types }}">0</span>+</h1>
-              <h5 class="mt-3">Dish Types</h5>
-              <p class="text-sm"> ... </p>
+              <h5 class="mt-3"><a href="{% url 'kitchen:dish-type-list' %}">Dish Types</a></h5>
+              <p class="text-sm"> The most diverse types of food are only here! </p>
             </div>
             <hr class="vertical dark">
           </div>
           <div class="col-md-4 position-relative">
             <div class="p-3 text-center">
               <h1 class="text-gradient text-primary"> <span id="state2" countTo="{{ num_dishes }}">0</span>+</h1>
-              <h5 class="mt-3">Dishes</h5>
-              <p class="text-sm"> ... </p>
+              <h5 class="mt-3"><a href="{% url 'kitchen:dish-list' %}">Dishes</a></h5>
+              <p class="text-sm"> The most delicious dishes from around the world! </p>
             </div>
             <hr class="vertical dark">
           </div>
           <div class="col-md-4">
             <div class="p-3 text-center">
               <h1 class="text-gradient text-primary" id="state3" countTo="{{ num_cooks }}">0</h1>
-              <h5 class="mt-3">Cooks</h5>
-              <p class="text-sm"> ... </p>
+              <h5 class="mt-3"><a href="{% url 'kitchen:cook-list' %}">Cooks</a></h5>
+              <p class="text-sm"> The best professionals in their field! </p>
             </div>
           </div>
         </div>
