--- a/templates/kitchen/dish_type_confirm_delete.html
+++ b/templates/kitchen/dish_type_confirm_delete.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "layouts/base_sections.html" %}
 
 {% block content %}
-  <h1>Delete dish type?</h1>
-  <form action="" method="post">
+  <h1 class="mt-7 text-start">Delete dish type?</h1>
+  <form action="" method="post" class="text-startb">
     {% csrf_token %}
 
     <input type="submit" value="Yes" class="btn btn-danger">
