Add new frontend to dish_type_form.html and change class on dish_type_confirm_delete.html

--- a/templates/kitchen/dish_type_confirm_delete.html
+++ b/templates/kitchen/dish_type_confirm_delete.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <h1 class="mt-7 text-start">Delete dish type?</h1>
-  <form action="" method="post" class="text-startb">
+  <form action="" method="post" class="text-start">
     {% csrf_token %}
 
     <input type="submit" value="Yes" class="btn btn-danger">
