--- a/templates/kitchen/dish_type_form.html
+++ b/templates/kitchen/dish_type_form.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends "layouts/base_sections.html" %}
 
 {% block content %}
-  <h1>{{ object|yesno:"Update,Create" }} dish type</h1>
+  <h1 class="mt-7">{{ object|yesno:"Update,Create" }} dish type</h1>
   <form action="" method="post" novalidate>
     {% csrf_token %}
     {{ form.as_p }}
