--- a/templates/includes/pagination.html
+++ b/templates/includes/pagination.html
@@ -5,7 +5,7 @@
       {% if page_obj.has_previous %}
         <li class="page-item">
           <a class="page-link" href="?{% query_transform request page=page_obj.previous_page_number %}" aria-label="Previous">
-            <span aria-hidden="true"><i class="fa fa-angle-double-left" aria-hidden="true"></i></span>
+            <span aria-hidden="true"><<</span>
           </a>
         </li>
       {% endif %}
@@ -15,7 +15,7 @@
       {% if page_obj.has_next %}
         <li class="page-item">
           <a class="page-link" href="?{% query_transform request page=page_obj.next_page_number %}" aria-label="Next">
-            <span aria-hidden="true"><i class="fa fa-angle-double-right" aria-hidden="true"></i></span>
+            <span aria-hidden="true">>></span>
           </a>
         </li>
       {% endif %}
