Add new frontend to page cook_detail.html and chnge file navigation

--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -112,7 +112,7 @@
 
                   <div class="d-lg-none">
                     <div
-                      class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center px-0">
+                      class="dropdown-header text-dark font-weight-bolder d-flex justify-content-center align-items-center px-0">
                       <div class="d-inline-block">
                         <div
                           class="icon icon-shape icon-xs border-radius-md bg-gradient-primary text-center me-2 d-flex align-items-center justify-content-center">
