Change dish_list.html, cook_list.html and dish_type_list.html

--- a/templates/kitchen/cook_list.html
+++ b/templates/kitchen/cook_list.html
@@ -53,25 +53,35 @@
   </div>
 </section>
 
-    {% if cook_list %}
-    <table class="table">
-      <tr>
-        <th class="alert alert-dark text-white font-weight-bold">Username</th>
-        <th class="alert alert-dark text-white font-weight-bold">First name</th>
-        <th class="alert alert-dark text-white font-weight-bold">Last name</th>
-        <th class="alert alert-dark text-white font-weight-bold">Years of experience</th>
-      </tr>
-    {% for cook in cook_list %}
-      <tr>
-        <td class="alert alert-success text-white font-weight-bold link"><a href="{% url 'kitchen:cook-detail' pk=cook.id %}">{{ cook.username }} {% if user == cook %} (Me){% endif %}</a></td>
-        <td class="alert alert-secondary text-white font-weight-bold">{{ cook.first_name }}</td>
-        <td class="alert alert-secondary text-white font-weight-bold">{{ cook.last_name }}</td>
-        <td class="alert alert-secondary text-white font-weight-bold">{{ cook.years_of_experience }}</td>
-      </tr>
-    {% endfor %}
+<section class="vh-lg-100 mt-5 mt-lg-0 bg-soft d-flex align-items-center">
+  <div class="container">
+    <div class="row form-bg-image">
+      <div class="col-12 d-flex align-items-center">
+        <div class="signin-inner my-3 my-lg-0 bg-white shadow border-0 rounded p-4 p-lg-5 w-100 fmxw-500 ms-0 text-start">
+          {% if cook_list %}
+          <table class="table">
+            <tr>
+              <th class="alert alert-dark text-white font-weight-bold">Username</th>
+              <th class="alert alert-dark text-white font-weight-bold">First name</th>
+              <th class="alert alert-dark text-white font-weight-bold">Last name</th>
+              <th class="alert alert-dark text-white font-weight-bold">Years of experience</th>
+            </tr>
+          {% for cook in cook_list %}
+            <tr>
+              <td class="alert alert-success text-white font-weight-bold link"><a href="{% url 'kitchen:cook-detail' pk=cook.id %}">{{ cook.username }} {% if user == cook %} (Me){% endif %}</a></td>
+              <td class="alert alert-secondary text-white font-weight-bold">{{ cook.first_name }}</td>
+              <td class="alert alert-secondary text-white font-weight-bold">{{ cook.last_name }}</td>
+              <td class="alert alert-secondary text-white font-weight-bold">{{ cook.years_of_experience }}</td>
+            </tr>
+          {% endfor %}
 
-    </table>
-    {% else %}
-      <p>There are no cooks in the kitchen.</p>
-    {% endif %}
+          </table>
+          {% else %}
+            <p>There are no cooks in the kitchen.</p>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 {% endblock %}
