--- a/templates/kitchen/dish_type_list.html
+++ b/templates/kitchen/dish_type_list.html
@@ -53,41 +53,51 @@
   </div>
 </section>
 
-  {% if dish_type_list %}
-    <table class="table">
-      <tr>
-        <th class="alert alert-dark text-white font-weight-bold">Name</th>
-        <th class="alert alert-dark text-white font-weight-bold">Update</th>
-        <th class="alert alert-dark text-white font-weight-bold">Delete</th>
-      </tr>
+<section class="vh-lg-100 mt-5 mt-lg-0 bg-soft d-flex align-items-center">
+  <div class="container">
+    <div class="row form-bg-image">
+      <div class="col-12 d-flex align-items-center">
+        <div class="signin-inner my-3 my-lg-0 bg-white shadow border-0 rounded p-4 p-lg-5 w-100 fmxw-500 ms-0 text-start">
+          {% if dish_type_list %}
+            <table class="table">
+              <tr>
+                <th class="alert alert-dark text-white font-weight-bold">Name</th>
+                <th class="alert alert-dark text-white font-weight-bold">Update</th>
+                <th class="alert alert-dark text-white font-weight-bold">Delete</th>
+              </tr>
 
-      {% for dish_type in dish_type_list %}
-        <tr>
+              {% for dish_type in dish_type_list %}
+                <tr>
 
-          <td>
-            <div class="alert alert-info text-white font-weight-bold" role="alert">
-              {{ dish_type.name }}
-            </div>
-          </td>
-          <td>
-            <span class="badge bg-gradient-success">
-              <a href="{% url 'kitchen:dish-type-update' pk=dish_type.id %}">
-                Update
-              </a>
-            </span>
-            </td>
-            <td>
-              <span class="badge bg-gradient-danger">
-                <a href="{% url 'kitchen:dish-type-delete' pk=dish_type.id %}">
-                  Delete
-                </a>
-              </span>
-            </td>
-        </tr>
-      {% endfor %}
-    </table>
+                  <td>
+                    <div class="alert alert-info text-white font-weight-bold" role="alert">
+                      {{ dish_type.name }}
+                    </div>
+                  </td>
+                  <td>
+                    <span class="badge bg-gradient-success">
+                      <a href="{% url 'kitchen:dish-type-update' pk=dish_type.id %}">
+                        Update
+                      </a>
+                    </span>
+                    </td>
+                    <td>
+                      <span class="badge bg-gradient-danger">
+                        <a href="{% url 'kitchen:dish-type-delete' pk=dish_type.id %}">
+                          Delete
+                        </a>
+                      </span>
+                    </td>
+                </tr>
+              {% endfor %}
+            </table>
 
-  {% else %}
-      <p>There are no dish type in the kitchen.</p>
-  {% endif %}
+          {% else %}
+              <p>There are no dish type in the kitchen.</p>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 {% endblock %}
