Change settings.py and add PostgreSQL database

--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -75,7 +75,7 @@
             {% endfor %}
           </table>
           {% else %}
-          <p>There are no cars in taxi</p>
+          <p>There are no dishes in kitchen menu!</p>
           {% endif %}
         </div>
       </div>
