--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -38,7 +38,7 @@
       <div class="col-12 d-flex align-items-center">
         <div class="signin-inner my-3 my-lg-0 bg-white shadow border-0 rounded p-4 p-lg-5 w-100 fmxw-500 ms-0 text-start">
           <h1>
-            Cook
+            Dishes
             <a href="{% url 'kitchen:dish-create' %}" class="btn btn-primary link-to-page">Create</a>
           </h1>
           <h1 class="h3">Find your best food</h1>
